# aardvark

./: .coveragerc  .gitignore  .gitlab-ci.yml  .stestr.conf  .testr.conf  Dockerfile  README.md  openstack-aardvark.spec  requirements.txt  setup.cfg  test-requirements.txt  tests-py3.txt  tox.ini
aardvark/: __init__.py  config.py  exception.py  utils.py  version.py
aardvark/api/: __init__.py  cinder.py  instance.py  keystone.py  nova.py  placement.py  project.py  resource_provider.py  system.py
aardvark/api/rest/: keystone.py  nova.py  placement.py
aardvark/backend/api/: __init__.py  resource_provider.py  system.py
aardvark/backend/api/rest/: nova.py  placement.py
aardvark/cmd/: aardvark_manage.py  db_manage.py  notification_listener.py  reaper_service.py  state_calulator.py  test.py
aardvark/conf/: __init__.py  aardvark_conf.py  cinder_conf.py  database_conf.py  default_conf.py  keystone_conf.py  notification_conf.py  nova_conf.py  placement_conf.py  reaper_conf.py  reaper_notifier_conf.py
aardvark/db/: api.py  migration.py  nova_api.py  nova_cell_api.py  placement_api.py
aardvark/db/sqlalchemy/: api.py  migration.py  models.py  nova_api.py  nova_api_models.py  nova_cell_api.py  nova_cell_models.py  placement_api.py  placement_api_models.py  utils.py
aardvark/db/sqlalchemy/alembic/: env.py
aardvark/db/sqlalchemy/alembic/versions/: 748535e3dd22_add_reaper_actions.py  a1868275ceb7_initial_migration.py
aardvark/notifications/: base.py  endpoints.py  events.py  manager.py
aardvark/objects/: __init__.py  base.py  capabilities.py  instance.py  inventory.py  project.py  resource_provider.py  resources.py  system.py  usage.py
aardvark/objects/nova/: cell_mapping.py  instance.py  resource_provider.py
aardvark/reaper/: driver.py  job_manager.py  reaper.py  reaper_action.py  reaper_request.py  strategy.py
aardvark/reaper/drivers/: chance_driver.py  strict_driver.py
aardvark/reaper/notifier/: __init__.py  base.py  email_notifier.py  log_notifier.py  megabus_notifier.py  oslo_notifier.py
aardvark/reaper/strategies/: chance.py  strict.py  strict_time.py  utils.py
aardvark/services/: notifications.py  reaper_service.py  service.py
aardvark/tests/: base.py  conf_fixture.py
aardvark/tests/unit/: test_utils.py
aardvark/tests/unit/api/: test_placement.py
aardvark/tests/unit/db/: base.py  test_reaper_action.py  utils.py
aardvark/tests/unit/notifications/: fakes.py  test_endpoints.py  test_events.py  test_manager.py
aardvark/tests/unit/objects/: fakes.py  test_capabilities.py  test_instance.py  test_resources.py
aardvark/tests/unit/reaper/: fakes.py  test_reaper.py  test_reaper_request.py  test_strategies.py
aardvark/tests/unit/reaper/notifier/: test_notifier.py
aardvark/tests/unit/reaper/strategies/: test_chance_strategy.py  test_strict_strategy.py  (+2 more)
aardvark/tests/unit/services/: test_service.py
configfiles/: aardvark-reaper.service  openstack-aardvark.logrotate
devstack/: plugin.sh  redis.service  settings
devstack/src/: aardvark
kubernetes-deploy/: aardvark-deploy.yaml  aardvark-etc.yaml  aardvark-ns.yaml
