[metadata]
name = aardvark
summary = Preemptible Instances Orchestrator
description-file =
    README.md
author = ttsiouts
author-email = theodoros.tsioutsias@cern.ch
home-page = https://gitlab.cern.ch/ttsiouts/aardvark
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[entry_points]
# Add an entry point for playing around
console_scripts =
    aardvark_reaper = aardvark.cmd.reaper_service:main
aardvark.reaper.driver =
    strict_driver = aardvark.reaper.drivers.strict_driver:StrictDriver
    chance_driver = aardvark.reaper.drivers.chance_driver:ChanceDriver
