[metadata]
name = aardvark
summary = Preemptible Instances Orchestrator
description-file =
    README.md
author = ttsiouts
author-email = theodoros.tsioutsias@cern.ch
home-page = https://gitlab.cern.ch/ttsiouts/aardvark
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[entry_points]
# Add an entry point for playing around
console_scripts =
    aardvark_reaper = aardvark.cmd.reaper_service:main
    aardvark_db = aardvark.cmd.db_manage:main
    aardvark_manage = aardvark.cmd.aardvark_manage:main
aardvark.reaper.strategy =
    strict = aardvark.reaper.strategies.strict:StrictStrategy
    chance = aardvark.reaper.strategies.chance:ChanceStrategy
aardvark.database.migration_backend =
    sqlalchemy = aardvark.db.sqlalchemy.migration
aardvark.reaper.notifier =
    log = aardvark.reaper.notifier:LogNotifier
    email = aardvark.reaper.notifier:EmailNotifier
